src/objects/Audio_Event__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResourceUrl__c</fullName>
        <label>ResourceUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resource_Id__c</fullName>
        <label>Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Percentage__c</fullName>
        <label>Volume Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Audio Event</label>
</CustomObject>